--- a/Jupyter_Notebooks/KRR_SB.ipynb
+++ b/Jupyter_Notebooks/KRR_SB.ipynb
@@ -608,9 +608,7 @@
         "id": "5f7f159f"
       },
       "source": [
-        "Lets propagate dynamics with the above trained KRR model trained on site-1 population. We provide a test file ```site_1_pop.txt``` in ```test_set/sb/``` having an unseen short time trajectory (of the same length as was adopted during the training). We feed this short-time dynamics to the trained KRR model and we hope that it will predict the long dynamics. The short-time trajectoy is passed as a txt file. ***MLQD is also able to plot the dynamics against the reference trajectory***.\n",
-        "\n",
-        "![image%20%282%29.png](attachment:image%20%282%29.png)\n"
+        "Lets propagate dynamics with the above trained KRR model trained on site-1 population. We provide a test file ```site_1_pop.txt``` in ```MLQD/Jupyter_Notebooks/test_set/sb/``` having an unseen short time trajectory (of the same length as was adopted during the training). We feed this short-time dynamics to the trained KRR model and we hope that it will predict the long dynamics. The short-time trajectoy is passed as a txt file. ***MLQD is also able to plot the dynamics against the reference trajectory***."
       ]
     },
     {
