--- a/Jupyter_Notebooks/AIQD_FMO.ipynb
+++ b/Jupyter_Notebooks/AIQD_FMO.ipynb
@@ -1270,14 +1270,14 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 19,
-      "id": "5ca83f00",
+      "cell_type": "markdown",
+      "source": [
+        "**For better results, we need to highly optimize the hyperparameters and also train it for large number of epochs**"
+      ],
       "metadata": {
-        "id": "5ca83f00"
+        "id": "95QAxaN-72TR"
       },
-      "outputs": [],
-      "source": []
+      "id": "95QAxaN-72TR"
     }
   ],
   "metadata": {
